# ipymidi

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: pypipublish.yml
js/: enable_midi.ts  index.ts  widget.ts  widget_event.ts  widget_interface.ts
src/ipymidi/: __init__.py  event.py  event_traits.py  interface.py
src/ipymidi/tests/: test_event.py  test_interface.py
